frontend/test/should_pass/deque_model_003.gm
node class N
{
	nodeDeque:deque<Node>;
	nDeque:deque<N>;
	val:int;
}

edge class E
{
	edgeDeque:deque<Edge>;
	eDeque:deque<E>;
	uDeque:deque<UEdge>;
	val:int;
}
