frontend/test/should_fail/no_match_in_node.gm
node class N
{
	m:match<t>;
}
